# auto-face-deleter

./: .gitignore  README.md  install.bat  install_hysts_probe.bat  pyproject.toml  run-crop.bat  run-exclude-mouth.bat  run-eye-only.bat  run-lama.bat  run-white-exclude-mouth.bat  run-white-eye-only.bat  run-white.bat  run.bat  run_tests.bat
auto_face_deleter/: __init__.py  cli.py  constants.py  debug.py  detector.py  hysts_engine.py  inpaint.py  io.py  masking.py  models.py  pipeline.py  qa.py  types.py
tools/: hysts_faceless_probe.py
