[project]
name = "auto-face-deleter"
version = "0.1.0"
description = "Local CUDA anime face feature remover"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==1.23.5",
    "opencv-python==4.11.0.86",
    "pillow>=10.0.0,<13.0.0",
    "rich>=14.2.0,<15.0.0",
    "typer>=0.20.0,<0.21.0",
]

[project.scripts]
afd = "auto_face_deleter.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
